# storage/openapi.yaml
@@ -10,6 +10,31 @@ tags:
 - name: devices
   description: Operations available to swimming pool level checking machine
 paths:
+  /health:
+    get:
+      tags:
+        - devices
+      summary: gets the event stats
+      operationId: app.health_check
+      description: Gets orders received and damaged parts statistics
+      responses:
+        '200':
+          description: Successfully returned a list of orders received and damaged parts events
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/Health'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
   /phlevel:
     post:
       tags:
@@ -128,6 +153,14 @@ paths:
                     type: string
 components:
   schemas:
+    Health:
+      required:
+      - storage
+      type: object
+      properties:
+        storage:
+          type: string
+          example: A12345
     PHLevel:
       required:
       - location
